<resources>
    <string name="app_name">JuegoDeCartas</string>
    <string name="iniciar">JUGAR</string>
    <string name="salir">salir</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="todo">TODO</string>
    <string name="choose_language">Elija el idioma</string>
    <string name="nivel_facil">NIVEL FACIL</string>
    <string name="nivel_medio">NIVEL MEDIO</string>
    <string name="nivel_dif_cil">NIVEL DIFÍCIL</string>
    <string name="SALIR">salir</string>
    <string name="nombre">Nombre:</string>
    <string name="email">Email:</string>
    <string name="telefono">Telefono:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="pon_una_contrase_a">Pon una contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="volver">volver</string>
    <string name="pon_un_email">Pon un email</string>
    <string name="pon_un_telefono">Pon un telefono</string>
    <string name="pon_un_nombre">Pon un nombre</string>
    <string name="repita_la_contrase_a">Repita la contraseña</string>
    <string name="formulario_de_registro">Formulario de Registro</string>
    <string name="puntuacion">"PUNTUACIÓN: "</string>
    <string name="puntos" />
    <string name="ganar">Has ganado</string>
    <string name="punto">"Puntuación: "</string>
    <string name="usuario_o_email">Usuario o Email:</string>
    <string name="pon_tu_email">Pon tu email</string>
    <string name="pon_tu_contrase_a">Pon tu contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="inicia">Iniciar</string>
    <string name="contrasena">Contraseña:</string>
    <string name="puntuaci_n_alta">Puntuación + alta</string>
    <string name="puntuaci_n_alta2">Puntuación + alta</string>
    <string name="puntuaci_n_alta3">Puntuación + alta</string>
    <string name="tiempo">tiempo</string>
</resources>