<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#DDDBD7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageButton
        android:id="@+id/language_button"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:layout_marginBottom="79dp"
        android:onClick="showLanguageDialog"
        android:src="@drawable/ajustes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <Button
        android:id="@+id/iniciarsesion"
        android:layout_width="106dp"
        android:layout_height="46dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/redondo"
        android:onClick="login"
        android:text="@string/inicia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emailtxtlog"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/usuario_o_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emaillog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/contraseñatxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/contrasena"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/contraseñalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/contraseñalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:hint="@string/pon_tu_contrase_a"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/iniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emaillog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/pon_tu_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/contraseñatxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/crearcuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="145dp"
        android:onClick="crearcuenta"
        android:text="@string/crear_cuenta"
        app:layout_constraintBottom_toTopOf="@+id/iniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseñalog"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="72dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/iniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crearcuenta"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/muteo"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:onClick="mutear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/muteo" />

</androidx.constraintlayout.widget.ConstraintLayout>