<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#DDDBD7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">


    <Button
        android:id="@+id/facil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/redondo"
        android:onClick="showtiempo"
        android:text="@string/nivel_facil"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202" />

    <Button
        android:id="@+id/medio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="medio"
        android:background="@drawable/redondo"
        android:text="@string/nivel_medio"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <Button
        android:id="@+id/dificil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="dificil"
        android:background="@drawable/redondo"
        android:text="@string/nivel_dif_cil"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <Button
        android:id="@+id/salir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:background="@drawable/redondo"
        android:text="@string/SALIR"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <ImageButton
        android:id="@+id/imageView"
        android:layout_width="208dp"
        android:layout_height="283dp"
        android:layout_marginTop="64dp"
        android:onClick="cambiarfoto"
        android:background="@drawable/borde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salir"
        tools:srcCompat="@drawable/avatar" />


</androidx.constraintlayout.widget.ConstraintLayout>